Refactor: Create simple ETL without Prefect for GitHub Actions
✅ New Features:
- etl_simple.py: Complete ETL pipeline without Prefect dependencies
- Simplified requirements.txt (only pandas, pyarrow, lxml)
- Same functionality: extract, transform, load with logging
- Email generation, grade normalization, duplicate removal
- Detailed logging to file and console

--- a/.github/workflows/etl-simple.yml
+++ b/.github/workflows/etl-simple.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         echo "🚀 Iniciando ETL Pipeline..."
         cd flows
-        python etl_lab2_prefect.py
+        python etl_simple.py
         echo "✅ Pipeline completado"
     
     - name: 📊 Show results
