--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-prefect==2.19.9
+# ETL dependencies - No Prefect needed for GitHub Actions
 pandas>=2.2.0
 pyarrow>=15.0.0
 lxml>=5.2.0
-sqlite-utils>=3.36
