config: Cambiar ejecución automática a una vez por día al mediodía
- Programar ejecución diaria a las 12:00 PM COT (17:00 UTC)
- Simplificar schedule para una sola ejecución diaria
- Mantener opciones de ejecución manual y por push

--- a/.github/workflows/etl-simple.yml
+++ b/.github/workflows/etl-simple.yml
@@ -2,9 +2,9 @@ name: ETL Pipeline Simple
 
 on:
   schedule:
-    # Diario a las 8:00 AM UTC
-    - cron: '0 8 * * *'
-  workflow_dispatch:
+    # Ejecución diaria al mediodía Colombia (UTC-5)
+    - cron: '0 17 * * *'  # 5:00 PM UTC = 12:00 PM COT (mediodía)
+  workflow_dispatch:  # Permite ejecución manual
   push:
     branches: [ main ]
     paths: ['flows/**', 'data/**']
